[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI/PartyInterface.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/PartyMemberDisplay.tscn" type="PackedScene" id=2]

[node name="PartyInterface" type="Control"]
margin_right = 235.0
margin_bottom = 347.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 10
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 235.0
margin_bottom = 10.0
size_flags_vertical = 2
custom_constants/separation = 10

[node name="PartyMemberDisplay1" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
visible = false
margin_bottom = 48.0

[node name="PartyMemberDisplay2" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
visible = false
margin_bottom = 48.0

[node name="PartyMemberDisplay3" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
visible = false
margin_bottom = 48.0

[node name="PartyMemberDisplay4" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
visible = false
margin_bottom = 48.0
